# Simulador_de_Trafego

./: CMakeLists.txt  README.md  Simulador.cpp  Simulador.h  Simulador_Final  Veiculo.cpp  main.cpp  simulacao.cpp
Simulador/: CMakeLists.txt  main.cpp
Testes/: CMakeLists.txt  Teste_Rodovia.cpp  Teste_Simulador.cpp  Teste_Veiculo.cpp
include/: Rodovia.h  Veiculo.h
src/: Rodovia.cpp
tests/: CMakeLists.txt  Teste_Rodovia.cpp  Teste_Simulador.cpp  Teste_Veiculo.cpp
